--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,11 @@
 <html>
   <head>
     <title>Rails6Template</title>
-    <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-	  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+	<%= javascript_link_tag'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
