--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,16 @@
     <title>Rails6Template</title>
     <%= csp_meta_tag %>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-	<%= javascript_link_tag'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="">
+      <%= render 'layouts/nav' %>
+    </div>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
   </body>
 </html>
