--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,17 +3,15 @@
   <head>
     <title>Rails6Template</title>
     <%= csp_meta_tag %>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <div class="">
-      <%= render 'layouts/nav' %>
-    </div>
-      <%= yield %>
-      <%= render 'layouts/footer' %>
+    <%= render 'layouts/nav' %>
+    <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
