--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Forgot your password?</h2>
+<!-- password reset -->
+<div class="min-vh-100 d-flex align-items-center " style="background:url(/assets/register-img.jpg)no-repeat; background-size: cover;">
+  <div class="container">
+    <div class="row">
+      <div class="offset-lg-3 col-lg-6 col-12">
+        <a href="../index.html" class="mb-4 d-flex justify-content-center">
+          <img src="/assets/logo.svg" alt="" /></a>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="bg-dark p-4 p-lg-8 rounded-lg text-muted">
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <div class="form-group mb-4">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email",
+                class: "form-control border-0", placeholder: "请输入Email地址"
+              %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "发送密码重置邮件", class: "btn btn-primary btn-block" %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
