--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render "layouts/navbar" %>
     <%= yield %>
     <p class="notice"><%= notice if notice %></p>
     <p class="alert"><%= alert if notice %></p>
