--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,9 +6,9 @@
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li><a href="#" class="nav-link px-2 link-secondary">主页</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">Labs</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">价格</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+    <li><a href="#" class="nav-link px-2 link-dark">实验室</a></li>
+    <li><a href="#" class="nav-link px-2 link-dark">课程</a></li>
+    <li><a href="#" class="nav-link px-2 link-dark">关于</a></li>
   </ul>
 
   <div class="col-md-3 text-end">
