--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -17877,7 +17877,7 @@ a.badge-light-success-soft:focus {
 }
 .bg-shape:after {
   position: absolute;
-  background: url(../images/curve-shape.svg);
+  background: url(../assets/curve-shape.svg);
   background-size: cover;
   background-repeat: no-repeat;
   bottom: -15px;
