--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-light text-white d-flex flex-wrap align-items-center justify-content-center
+<header class="bg-dark text-white d-flex flex-wrap align-items-center justify-content-center
      justify-content-md-between py-3 mb-4 border-bottom">
   <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
      <img src="/assets/logo.svg" alt="" />
