--- a/app/views/layouts/courses.html.erb
+++ b/app/views/layouts/courses.html.erb
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= render "layouts/navbar" %>
+    <!-- program list -->
     <%= yield %>
     <p class="notice"><%= notice if notice %></p>
     <p class="alert"><%= alert if notice %></p>
