root to las#index

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -384,9 +384,8 @@
               </div>
             </li>
             <li class="list-group-item py-3">
-              <a href="#!" class="btn btn-secondary btn-block">
-                我 要 学 习
-              </a>
+              <%= link_to "我 要 学 习", "/labs/1",
+                class: "btn btn-secondary btn-block" %>
             </li>
           </ul>
         </div>
