--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -384,7 +384,7 @@
               </div>
             </li>
             <li class="list-group-item py-3">
-              <%= link_to "我 要 学 习", "/labs/1",
+              <%= link_to "我 要 学 习", @course&.task_catalog,
                 class: "btn btn-secondary btn-block" %>
             </li>
           </ul>
