--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render "layouts/navbar" %>
     <%= yield %>
-    <p class="notice"><%= notice if notice %></p>
-    <p class="alert"><%= alert if notice %></p>
+    <p class="notice hide"><%= notice if notice %></p>
+    <p class="alert hide"><%= alert if notice %></p>
   </body>
 </html>
