--- a/app/views/task_catalogs/show.html.erb
+++ b/app/views/task_catalogs/show.html.erb
@@ -1,25 +1,34 @@
 <div id="mmenu_screen" class="container-fluid d-flex">
   <div class="row gx-2 flex-fill">
     <div class="col-4 border bg-dark p-2 text-white rounded">
-      <ul class="nav nav-tabs m-2" id="myTab" role="tablist">
-        <li class="nav-item pl-2" role="presentation">
-          <button class="nav-link active" id="home-tab" data-bs-toggle="tab"
-                                                        data-bs-target="#home" type="button" role="tab"
-                                                                                             aria-controls="home" aria-selected="true">
+      <ul class="nav nav-pills nav-justified nav-pills-border" id="pills-tab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="pills-home-tab"
+               data-toggle="pill"
+               href="#pills-hone"  role="tab"
+               data-turbolinks=false
+               aria-controls="home" aria-selected="true">
             任务
-          </button>
+          </a>
         </li>
-        <li class="nav-item pl-2" role="presentation">
-          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+        <li class="nav-item fw-bold bg-white">
+          <a class="nav-link" id="pills-hint-tab" data-toggle="pill"
+               href="#pills-hint"  role="tab"
+               data-turbolinks=false
+               aria-controls="home" aria-selected="true">
             提示
-          </button>
+          </a>
         </li>
-        <li class="nav-item pl-2" role="presentation">
-          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">
+         <li class="nav-item bg-white bd-black">
+          <a class="nav-link" id="pills-solution-tab" data-toggle="pill"
+               href="#pills-solution"  role="tab"
+               data-turbolinks=false
+
+               aria-controls="home" aria-selected="true">
             答案
-          </button>
+          </a>
         </li>
-        <li class="nav-item ml-5" style="font-size: 1.5em;" role="presentation">
+        <li class="nav-item" style="font-size: 1.25em;" role="presentation">
           <span>
             <svg class="bi" width="1em" height="1em" fill="currentColor">
               <use xlink:href="/assets/bootstrap-icons.svg#alarm"></use>
@@ -30,7 +39,7 @@
         </li>
       </ul>
       <div class="tab-content m-4" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div class="tab-pane fade show active" id="pills-task" role="tabpanel" aria-labelledby="home-tab">
           <div class="container">
             <div class="row">
               <ul class="nav">
@@ -54,10 +63,10 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="tab-pane fade" id="pills-hint" role="tabpanel" aria-labelledby="profile-tab">
           Profile tab
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        <div class="tab-pane fade" id="pills-solution" role="tabpanel" aria-labelledby="contact-tab">...</div>
       </div>
     </div>
 
