--- a/app/views/task_catalogs/show.html.erb
+++ b/app/views/task_catalogs/show.html.erb
@@ -1,7 +1,7 @@
 <div id="mmenu_screen" class="container-fluid d-flex">
   <div class="row gx-2 flex-fill">
     <div class="col-4 border bg-dark p-2 text-white rounded">
-      <ul class="nav nav-pills nav-justified nav-pills-border" id="pills-tab" role="tablist">
+      <ul class="nav nav-pills nav-justified nav-pills-border bg-white" id="pills-tab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active" id="pills-home-tab"
                data-toggle="pill"
@@ -19,7 +19,7 @@
             提示
           </a>
         </li>
-         <li class="nav-item bg-white bd-black">
+         <li class="nav-item bg-white">
           <a class="nav-link" id="pills-solution-tab" data-toggle="pill"
                href="#pills-solution"  role="tab"
                data-turbolinks=false
@@ -28,13 +28,14 @@
             答案
           </a>
         </li>
-        <li class="nav-item" style="font-size: 1.25em;" role="presentation">
+        <li class="nav-item text-secondary"
+          style="font-size: 1.25em; position: relative; top: 8px;" role="presentation">
           <span>
             <svg class="bi" width="1em" height="1em" fill="currentColor">
               <use xlink:href="/assets/bootstrap-icons.svg#alarm"></use>
             </svg>
           </span>
-          <span id="timer" class="text-white mt-1">
+          <span id="timer" class="pt-4">
           </span>
         </li>
       </ul>
