--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -41,7 +41,7 @@
                  data-toggle="pill" href="#pills-Coach" role="tab" aria-controls="pills-Coach" aria-selected="false">导师介绍</a>
             </li>
           </ul>
-          <div class="tab-content" id="pills-tabContent">
+          <div class="tab-content bg-white rounded p-1" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-Overview" role="tabpanel" aria-labelledby="pills-Overview-tab">
               <%= @course.desc.html_safe %>
             </div>
