--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
 						<div class="form-group mb-4">
 							<%= f.label "昵称" %><br />
-							<%= f.email_field :nickname, autofocus: true, autocomplete: "nickname",
+							<%= f.text_field :nickname, autofocus: true, autocomplete: "nickname",
                  class: "form-control border-0", placeholder: "昵称" %>
             </div>
 
