--- a/app/views/task_catalogs/show.html.erb
+++ b/app/views/task_catalogs/show.html.erb
@@ -54,24 +54,24 @@
             <div class="row">
               <button class="btn btn-primary btn-sm m-3" style="width: 10rem;">下一题</button>
             </div>
-            <div class="row" style="font-size: 1.5rem;">
+            <div id="task_text" class="row" style="font-size: 1.5rem;">
               <% if @current_task.text %>
                 <%= Kramdown::Document.new(@current_task.text).to_html.html_safe %>
               <% end %>
             </div>
-            <div class="row">
+            <div id="task_subtext" class="row" style="font-size: 1.3rem;">
               <%= @current_task.subtext %>
             </div>
           </div>
         </div>
         <div class="tab-pane fade" id="pills-hint" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="row">
+            <div id="task_hint" class="row">
               <%= @current_task.hint.present? ?  @current_task.hint : "No hint" %>
             </div>
         </div>
         <div class="tab-pane fade" id="pills-solution" role="tabpanel"
            aria-labelledby="contact-tab">
-            <div class="row" style="font-size: 2rem;">
+            <div id="taks_solution" class="row" style="font-size: 2rem;">
               <% if @current_task.solution.present? %>
                 <%= Kramdown::Document.new(@current_task.solution).to_html.html_safe %>
               <% end %>
