--- a/app/views/task_catalogs/show.html.erb
+++ b/app/views/task_catalogs/show.html.erb
@@ -44,15 +44,17 @@
           <div class="container">
             <div class="row">
               <ul class="nav">
-                <% @task_catalog.count&.times do |i|  %>
-                  <li class="nav-item bg-info m-1 p-1 text-center rounded" style="width: 2rem;">
-                    <%= i + 1 %>
+                <% @task_catalog.tasks.each_with_index do |task, i|  %>
+                  <li class="nav-item bg-info m-1 p-1 text-center rounded task-link" style="width: 2rem;">
+                    <%= link_to i + 1, task_path(task), remote: true %>
                   </li>
                 <% end %>
               </ul>
             </div>
             <div class="row">
-              <button class="btn btn-primary btn-sm m-3" style="width: 10rem;">下一题</button>
+              <%= link_to "下一题", task_path(@task_catalog.tasks.second),
+                id: "next-task", class: "btn btn-primary btn-sm m-3",
+                style: "width: 10rem;", remote: true %>
             </div>
             <div id="task_text" class="row" style="font-size: 1.5rem;">
               <% if @current_task.text %>
@@ -71,7 +73,7 @@
         </div>
         <div class="tab-pane fade" id="pills-solution" role="tabpanel"
            aria-labelledby="contact-tab">
-            <div id="taks_solution" class="row" style="font-size: 2rem;">
+            <div id="task_solution" class="row" style="font-size: 2rem;">
               <% if @current_task.solution.present? %>
                 <%= Kramdown::Document.new(@current_task.solution).to_html.html_safe %>
               <% end %>
